--- a/src/main/resources/templates/hospital/registration.html
+++ b/src/main/resources/templates/hospital/registration.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
     <head th:replace="fragments/config :: configFragment" />
+    <link rel="stylesheet" href="/../../../static/css/kakao.css">
 
-        <link rel="stylesheet" href="/../../../static/css/kakao.css">
     <body>
         <header th:replace="fragments/header :: headerFragment"></header>
         <h3 style="padding-top: 30px; padding-bottom: 20px; padding-left: 30px;"><b>동물병원 등록하기</b></h3>
@@ -32,7 +32,7 @@
             // 병원 등록 페이지 로드 됐을때 자동으로 시작
             $(document).ready(function(){
 
-                var result = prompt("본인의 병원 이름을 입력하세요.");
+                var result = prompt("본인의 병원 이름을 입력하세요.", "동물병원");
 
                 if(result == "" || result == null) {
                     alert("다시 입력해주세요.");
@@ -68,13 +68,13 @@
                 if(result2) {
                     $.ajax({
                         type: 'POST',
-                        url: '/api/hospital/signup',
+                        url: '/api/hospital/register',
                         dataType: 'json',
                         contentType: 'application/json; charset=utf-8',
                         data: JSON.stringify(data)
                     }).done(function () {
                         alert('등록완료 되었습니다!');
-                        window.location.href = "/member/hospital/mypage";
+                        window.location.href = "/hospital/myHospital";
                     }).fail(function (request, status, error) {
                         alert(JSON.stringify(error));
                         window.location.href = "/hospital/registeration";
@@ -329,8 +329,5 @@
         <script src="/../../../static/js/postcode-api.js"></script>
 
         <footer th:replace="fragments/footer :: footerFragment"></footer>
-
-
-
     </body>
 </html>
