--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="/../../../static/css/kakao.css">
     <body>
         <header th:replace="fragments/header :: headerFragment"></header>
-
         <!-- 예약하기 모달창 양식 구현-->
         <div class="modal fade" id="modal_div">
             <div class="modal-dialog">
@@ -14,7 +13,6 @@
                         <!-- 닫기(x) 버튼 -->
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">×</button>
                     </div>
-
                     <!-- body -->
                     <div class="modal-body">
                         <p>
@@ -35,7 +33,6 @@
                             <b>상세내용 :  </b>
                             <input type="text" id="description" class="form-control">
                         </p>
-
                         <input type="text" id="choice" th:field="${forms.choice}" hidden="true">
                     </div>
                     <br/>
@@ -86,6 +83,7 @@
                     <div>
                         <form onsubmit="searchPlaces(); return false;">
                             키워드 : <input type="text" th:field="${member.address.city}" id="keyword" size="24">
+
                         </form>
                     </div>
                 </div>
@@ -94,6 +92,8 @@
                 <div id="pagination"></div>
             </div>
         </div>
+
+
 
         <!-- 반려견 질병 진단 시각화 API -->
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -182,10 +182,13 @@
 
             // 장소검색이 완료됐을 때 호출되는 콜백함수 입니다
             function placesSearchCB(data, status, pagination) {
+                console.log("--------------data---------")
+                console.log(data);
                 if (status === kakao.maps.services.Status.OK) {
 
                     // 정상적으로 검색이 완료됐으면
                     // 검색 목록과 마커를 표출합니다
+
                     displayPlaces(data);
 
                     // 페이지 번호를 표출합니다
@@ -206,7 +209,8 @@
 
             // 검색 결과 목록과 마커를 표출하는 함수입니다
             function displayPlaces(places) {
-
+                console.log("장소제공==="+places);
+                // places///////////////////////////////
                 var listEl = document.getElementById('placesList'),
                     menuEl = document.getElementById('menu_wrap'),
                     fragment = document.createDocumentFragment(),
