--- a/src/main/resources/templates/hospital/registeration.html
+++ b/src/main/resources/templates/hospital/registeration.html
@@ -56,7 +56,7 @@
                 let data = {
                     name : hospital_name,
                     address : road,
-                    tel : tel,
+                    te : tel,
                 };
 
                 console.log(data);
