fix: Change the path for Reservation list (vet)

--- a/src/main/resources/templates/hospital/myHospital.html
+++ b/src/main/resources/templates/hospital/myHospital.html
@@ -32,6 +32,14 @@
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
                                 <div class="login100-form-bgbtn"></div>
+                                <a th:href="@{/vet/hospital/reservationList}" class="login100-form-btn">예약보기</a>
+                            </div>
+                        </div>
+                        <br/>
+
+                        <div class="container-login100-form-btn">
+                            <div class="wrap-login100-form-btn">
+                                <div class="login100-form-bgbtn"></div>
                                 <a th:href="'javascript:deleteHospital()'" class="login100-form-btn">삭제하기</a>
                             </div>
                         </div>
