--- a/src/main/resources/templates/admin/reserves/reserveModifyAdmin.html
+++ b/src/main/resources/templates/admin/reserves/reserveModifyAdmin.html
@@ -112,7 +112,7 @@
                 }).done(function () {
                     console.log(name);
                     alert('삭제 되었습니다.');
-                    window.location.href = '/admin/diseases/';
+                    window.location.href = '/admin/reserveList/';
                 }).fail(function (request, status, error) {
                     alert(JSON.stringify(error));
                     alert("code: " + request.status + "\n" + "message: " + request.responseText + "\n" + "error: " + error);
