--- a/src/main/resources/templates/memberAuth/signIn.html
+++ b/src/main/resources/templates/memberAuth/signIn.html
@@ -16,7 +16,7 @@
 
 						<div class="wrap-input100 validate-input m-b-23" data-validate = "이메일을 입력해주세요!">
 							<span class="label-input100">이메일</span>
-							<input class="input100" type="email" name="username" placeholder="이메일을 입력해주세요.">
+							<input class="input100" id = "email" type="email" name="username" placeholder="이메일을 입력해주세요.">
 							<span class="focus-input100" data-symbol="&#xf206;"></span>
 						</div>
 
