--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,8 @@
                     <div class="col-8 col-md-8 col-xl-6 ">
                         <div class="sub_header_social_icon float-right">
 
-
+                            <a class="btn_1 d-none d-md-inline-block"
+                               sec:authorize="isAnonymous()" href="/oauth2/authorization/google">Google Login</a>
                             <a class="btn_1 d-none d-md-inline-block"
                                sec:authorize="isAnonymous()" th:href="@{'/member/login'}">로그인</a>
                             <a class="btn_1 d-none d-md-inline-block"
