feat: Keep developing Guhaedog Mall (vet)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -31,7 +31,7 @@
                     <h4>
                         황승환
                         <a href="https://github.com/workhardslave"><img src="/../../static/images/github-fill.png" alt="황승환_깃헙" /></a>
-                        <a href="#"><img src="/../../static/images/instagram-fill.png" alt="황승환_인스타" /></a>
+                        <a href="https://www.instagram.com/workhardslave/"><img src="/../../static/images/instagram-fill.png" alt="황승환_인스타" /></a>
                     </h4>
                 </div>
             </div>
