--- a/src/main/resources/templates/member/memberAuth/signUp.html
+++ b/src/main/resources/templates/member/memberAuth/signUp.html
@@ -122,11 +122,13 @@
             // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
             $(document).ready(function(){
                 $("#user_email").blur(function() {
+                    let data = $('#user_email').val();
                     $.ajax({
                         type: "POST",
                         contentType: "application/json",
                         url: "/api/checkEmail",
-                        data: JSON.stringify({"user_email" : $('#user_email').val()}),
+                        // data: JSON.stringify({"user_email" : $('#user_email').val()}),
+                        data: JSON.stringify(data),
                         dataType: 'json',
                         success: function (data) {
                             console.log("1 = 중복이다 / 0 = 중복아니다 : "+ data);
