--- a/src/main/resources/templates/member/memberAuth/signUp.html
+++ b/src/main/resources/templates/member/memberAuth/signUp.html
@@ -122,12 +122,13 @@
             // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
             $(document).ready(function(){
                 $("#user_email").blur(function() {
+                    // by승환, 사용자의 이메일을 객체화_200826
                     let data = $('#user_email').val();
                     $.ajax({
                         type: "POST",
                         contentType: "application/json",
                         url: "/api/checkEmail",
-                        // data: JSON.stringify({"user_email" : $('#user_email').val()}),
+                        // by승환, 객체를 json 문자열로 만드는 과정에서 잘못되어서 수정_200826
                         data: JSON.stringify(data),
                         dataType: 'json',
                         success: function (data) {
